--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -6,3 +6,5 @@ $dark-color-1:#454545;
 $primary-color:#004dff;
 $secondary-color:#1dc679;
 $tertiary-color:#ff9f00;
+$viewport-xsm:360px;
+$viewport-sm:370px;
