--- a/src/sass/components/_featured-property-card.scss
+++ b/src/sass/components/_featured-property-card.scss
@@ -54,7 +54,7 @@
     &::before {
         content: "";
         background-image: url('https://i.postimg.cc/tJy3BqMW/icon-1.png');
-        margin-right: 15px;
+        margin-right: 10px;
         background-size: cover;
         width: 35px;
         height: 25px;
@@ -67,7 +67,7 @@
         content: "";
         background-image: url('https://i.postimg.cc/HsFxmZTP/icon-2.png');
         background-size: cover;
-        width: 50px;
+        width: 45px;
         height: 50px;
         display: inline-block;
         position: relative;
@@ -80,7 +80,7 @@
         content: "";
         background-image: url('https://i.postimg.cc/g0HkvG8f/icon-3.png`');
         background-size: cover;
-        margin-right: 15px;
+        margin-right: 10px;
         width: 35px;
         height: 35px;
         display: inline-block;
@@ -90,7 +90,13 @@
 }
 @include breakpoints(map-get($breakpoints, "viewport-sm")){
     .featured-property{
+        // text-align: center;
+        h2{
+            font-size: 25px;
+            text-align: center;
+        }
     .card-wrapper{
+        justify-content: center;
         .card {
             width: 100%;
             height: 420px;
@@ -99,8 +105,86 @@
                 height: 200px;
     
             }
+            .card-body{
+                text-align: center;
+               padding: 19px 7px 50px;
+               .card-description {
+                margin-bottom: 4px;
+            }
+            }
         }
        
     }
 }
+.card-beds{
+    &::before{
+        margin-right: 1px;
+    }
+}
+.card-baths{
+    &::before{
+        margin-right: 1px;
+        width: 40px;
+    }
+}
+.card-sqft{
+    &::before{
+        margin-right: 1px;
+        width: 20px;
+    }
+   
+}
+}
+
+@media(min-width:481px) and (max-width:769px){
+    .featured-property{
+        h2{
+            font-size: 25px;
+            text-align: center;
+        }
+    .card-wrapper{
+        justify-content: center;
+        .card {
+              margin-left: 10px;
+            .card-img {
+                width: 100%;
+                height: 200px;
+    
+            }
+            .card-body{
+                text-align: center;
+               padding: 19px 7px 50px;
+               .card-description {
+                margin-bottom: 4px;
+            }
+            }
+        }
+       
+    }
+}
+.card-beds{
+    &::before{
+        margin-right: 10px;
+    }
+}
+.card-baths{
+    &::before{
+        margin-right: 10px;
+        width: 40px;
+    }
+}
+.card-sqft{
+    &::before{
+        margin-right: 10px;
+        width: 20px;
+    }
+   
+}
+}
+@media(min-width:931px) and (max-width:1100px){
+    .featured-property{
+       .card-wrapper{
+        justify-content: space-evenly;
+       }
+    }
 }
