--- a/src/sass/components/_testimonials.scss
+++ b/src/sass/components/_testimonials.scss
@@ -1,9 +1,12 @@
-.client-card-section{
-      .card-wrapper{
+.client-card-section {
+    .card-wrapper {
         min-width: 2345px;
-        width: 100%;    
-        .client-card{
-            width: 340px;
+        width: 100%;
+        margin-left: 160px;
+
+
+        .client-card {
+            width: 400px;
             height: 500px;
             margin-top: 100px;
             padding: 50px 20px 0px;
@@ -12,70 +15,251 @@
             text-align: center;
             color: $dark-color-1;
             transition: all 0.5s ease-in-out;
-             &:nth-of-type(1){
-                 transform: translateY(-30px);
-             }
-            
+
+            &:nth-of-type(1) {
+                transform: translateY(-30px);
+            }
+
             &.active {
                 z-index: 2;
                 opacity: 1;
-                box-shadow: 1px 1px 3px 3px rgba(20,20,20,0.4);
-                background-color:$light-color;
-                position: relative ;
+                box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.05);
+                background-color: $light-color;
+                position: relative;
                 height: 540px;
-              }
-            .card-profile{
+            }
+
+            .card-profile {
                 width: 120px;
                 height: 120px;
                 margin-bottom: 37px;
             }
-            .card-title{  
-               margin-bottom: 18px;
+
+            .card-title {
+                margin-bottom: 18px;
                 font-size: 24px;
-                font-weight: bold;  
+                font-weight: bold;
             }
-            .card-description{
+
+            .card-description {
                 line-height: 1.5;
             }
         }
     }
-    .arrow{
+
+    .arrow {
         width: 30px;
         height: 30px;
         position: absolute;
         top: 60%;
         cursor: pointer;
     }
-    .left{
-        left: 25px;
+
+    .left {
+        left: -20px;
     }
-    .right{
+
+    .right {
         right: -20px;
     }
 }
+
 @include breakpoints(map-get($breakpoints, "viewport-sm")) {
-.client-card-section{
-    .card-wrapper{
-        justify-content: flex-start;
-        width: 100%;
-        .client-card{
-            width: 100%;
-            .card-profile{
-                // width: 100%;
+    .client-card-section {
+        .card-wrapper {
+            justify-content: flex-start;
+            margin-left: 0;
+
+            //   width: 100%;
+            .client-card {
+                width: 380px;
+                text-align: center;
+
+                .card-profile {
+                    width: 90px;
+                    height: 90px;
+                }
+
+                .card-description {
+                    width: 90%;
+                }
+
+                &.active {
+                    height: 500px;
+                }
             }
-            .card-title{  
-                width: 100%;
-            }
-            .card-description{
-               width: 70%;
+        }
+
+        .left {
+            left: 0;
+        }
+
+        .right {
+            right: 0;
+            z-index: 2;
+        }
+    }
+}
+
+@media (max-width:$viewport-xsm) {
+    .client-card-section {
+        .card-wrapper {
+            margin-left: 0;
+
+            //   width: 100%;
+            .client-card {
+                position: relative;
+                right: 30px;
+                max-width: 100%;
+                text-align: center;
+
+                .card-profile {
+                    width: 90px;
+                    height: 90px;
+                    margin-right: 70px;
+                }
+
+                .card-title {
+                    margin-right: 50px;
+                }
+
+                .card-description {
+                    width: 80%;
+                }
+
+                &.active {
+                    height: 500px;
+
+                }
             }
         }
     }
-    .left{
-        left: 0;
-    }
-    .right{
-        right: 0;
+}
+
+@media(min-width:615px) and (max-width:769px) {
+    .client-card-section {
+        .card-wrapper {
+            justify-content: flex-start;
+
+            .client-card {
+                // width: 180px;
+                text-align: center;
+
+                .card-profile {
+                    width: 90px;
+                    height: 90px;
+                }
+
+                .card-description {
+                    width: 90%;
+                }
+
+                &.active {
+                    height: 500px;
+                }
+            }
+        }
+
+        .left {
+            left: 0;
+        }
+
+        .right {
+            right: 0;
+            z-index: 2;
+        }
     }
 }
+
+@media(min-width:481px) and (max-width:616px){
+    .client-card-section {
+        .card-wrapper {
+            justify-content: flex-start;
+             margin-left: 50px;
+
+
+            .client-card {
+                // width: 180px;
+                text-align: center;
+            }
+        }
+        .left {
+            left: 0;
+        }
+
+        .right {
+            right: 0;
+            z-index: 2;
+        }
+    }
+}
+@media(min-width:769px) and (max-width:930px){
+    .client-card-section {
+        .card-wrapper {
+            justify-content: flex-start;
+            margin-left: 180px;
+
+            .client-card {
+                // width: 180px;
+                text-align: center;
+
+                .card-profile {
+                    width: 90px;
+                    height: 90px;
+                }
+
+                .card-description {
+                    width: 90%;
+                }
+
+                &.active {
+                    height: 550px;
+                }
+            }
+        }
+
+        .left {
+            left: 0;
+        }
+
+        .right {
+            right: 0;
+            z-index: 2;
+        }
+    }
+}
+@media(min-width:931px) and (max-width:1100px){
+    .client-card-section {
+        .card-wrapper {
+            justify-content: flex-start;
+            margin-left: 270px;
+
+            .client-card {
+                // width: 180px;
+                text-align: center;
+
+                .card-profile {
+                    width: 90px;
+                    height: 90px;
+                }
+
+                .card-description {
+                    width: 90%;
+                }
+
+                &.active {
+                    height: 550px;
+                }
+            }
+        }
+
+        .left {
+            left: 0;
+        }
+
+        .right {
+            right: 0;
+            z-index: 2;
+        }
+    }
 }
