--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -243,3 +243,29 @@
 
     }
 }
+@include breakpoints(map-get($breakpoints, "viewport-lg")) {
+    .navbar {
+        margin-top: 0;
+
+        .container {
+            &>a {
+                img{
+                width: 130px;
+                }
+            }
+
+            nav {
+                .nav-center {
+                    width: 100%;
+
+                    li {
+                        &:not(:last-child) {
+                            margin-right: 20px;
+                        }
+
+                    }
+                }
+            }
+        }
+    }
+}
