--- a/src/sass/layout/_villa-section.scss
+++ b/src/sass/layout/_villa-section.scss
@@ -64,14 +64,41 @@
 }
 @include breakpoints(map-get($breakpoints, "viewport-sm")) {
 .villa-section{
+    margin-bottom: 40px;
     .container{
+  
         .villa-card{
             width: 90%;
-            padding: 40px 50px 50px;
+            padding: 40px 0px 50px;
+            top: 100px;
+            text-align: center;
+            .card-title{
+                font-size: 23px;
+            }
         }
         .contact-card{
+            top: 500px;
             width: 90%;
+            padding: 24px 12px 30px 5px;
         }
     }
 }
 }
+@media(min-width:481px) and (max-width:769px) {
+    .villa-section{
+        margin-bottom: 40px;
+        .container{
+      
+            .villa-card{
+                width: 95%;
+                padding: 40px 0px 50px;
+                top: 100px;
+                text-align: center;
+            }
+            .contact-card{
+                top: 500px;
+                width: 95%;
+            }
+        }
+    }
+    }
