--- a/css/style.css
+++ b/css/style.css
@@ -314,12 +314,12 @@ a {
   }
 }
 .client-card-section .card-wrapper {
-  min-width: 2345px;
+  min-width: 2300px;
   width: 100%;
-  margin-left: 160px;
+  margin-left: 110px;
 }
 .client-card-section .card-wrapper .client-card {
-  width: 400px;
+  width: 350px;
   height: 500px;
   margin-top: 100px;
   padding: 50px 20px 0px;
@@ -544,7 +544,8 @@ a {
   }
 }
 .featured-property .card-wrapper {
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
 }
 .featured-property .card-wrapper .card {
   width: 345px;
@@ -625,7 +626,8 @@ a {
     text-align: center;
   }
   .featured-property .card-wrapper {
-    justify-content: center;
+    grid-template-columns: 1fr;
+    justify-items: center;
   }
   .featured-property .card-wrapper .card {
     width: 100%;
@@ -654,13 +656,14 @@ a {
     width: 20px;
   }
 }
-@media (min-width: 481px) and (max-width: 769px) {
+@media (min-width: 481px) {
   .featured-property h2 {
     font-size: 25px;
     text-align: center;
   }
   .featured-property .card-wrapper {
-    justify-content: center;
+    grid-template-columns: 1fr;
+    justify-items: center;
   }
   .featured-property .card-wrapper .card {
     margin-left: 10px;
@@ -688,9 +691,44 @@ a {
     width: 20px;
   }
 }
-@media (min-width: 931px) and (max-width: 1100px) {
+@media (min-width: 700px) and (max-width: 1075px) {
+  .featured-property h2 {
+    font-size: 25px;
+    text-align: center;
+  }
   .featured-property .card-wrapper {
-    justify-content: space-evenly;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+  }
+  .featured-property .card-wrapper .card {
+    margin-left: 10px;
+  }
+  .featured-property .card-wrapper .card .card-img {
+    width: 100%;
+    height: 200px;
+  }
+  .featured-property .card-wrapper .card .card-body {
+    text-align: center;
+    padding: 19px 7px 50px;
+  }
+  .featured-property .card-wrapper .card .card-body .card-description {
+    margin-bottom: 4px;
+  }
+  .card-beds::before {
+    margin-right: 10px;
+  }
+  .card-baths::before {
+    margin-right: 10px;
+    width: 40px;
+  }
+  .card-sqft::before {
+    margin-right: 10px;
+    width: 20px;
+  }
+}
+@media (min-width: 1076px) {
+  .featured-property .card-wrapper {
+    grid-template-columns: repeat(3, 1fr);
   }
 }
 .navbar {
