--- a/src/sass/components/_featured-property-card.scss
+++ b/src/sass/components/_featured-property-card.scss
@@ -1,6 +1,7 @@
 .featured-property {
     .card-wrapper {
-        flex-wrap: wrap;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
         .card {
             width: 345px;
             height: 420px;
@@ -90,13 +91,13 @@
 }
 @include breakpoints(map-get($breakpoints, "viewport-sm")){
     .featured-property{
-        // text-align: center;
         h2{
             font-size: 25px;
             text-align: center;
         }
     .card-wrapper{
-        justify-content: center;
+        grid-template-columns: 1fr;
+        justify-items: center;
         .card {
             width: 100%;
             height: 420px;
@@ -135,15 +136,16 @@
    
 }
 }
-
-@media(min-width:481px) and (max-width:769px){
+@media(min-width:481px){
     .featured-property{
         h2{
             font-size: 25px;
             text-align: center;
         }
     .card-wrapper{
-        justify-content: center;
+        grid-template-columns: 1fr;
+        justify-items: center;
+
         .card {
               margin-left: 10px;
             .card-img {
@@ -181,10 +183,57 @@
    
 }
 }
-@media(min-width:931px) and (max-width:1100px){
+
+@media(min-width:700px) and (max-width:1075px){
+    .featured-property{
+        h2{
+            font-size: 25px;
+            text-align: center;
+        }
+    .card-wrapper{
+        grid-template-columns: repeat(2, 1fr);
+        align-items: center;
+        .card {
+              margin-left: 10px;
+            .card-img {
+                width: 100%;
+                height: 200px;
+    
+            }
+            .card-body{
+                text-align: center;
+               padding: 19px 7px 50px;
+               .card-description {
+                margin-bottom: 4px;
+            }
+            }
+        }
+       
+    }
+}
+.card-beds{
+    &::before{
+        margin-right: 10px;
+    }
+}
+.card-baths{
+    &::before{
+        margin-right: 10px;
+        width: 40px;
+    }
+}
+.card-sqft{
+    &::before{
+        margin-right: 10px;
+        width: 20px;
+    }
+   
+}
+}
+@media(min-width:1076px){
     .featured-property{
        .card-wrapper{
-        justify-content: space-evenly;
+        grid-template-columns: repeat(3, 1fr);
        }
     }
 }
