--- a/css/style.css
+++ b/css/style.css
@@ -486,7 +486,7 @@ a {
     z-index: 2;
   }
 }
-@media (min-width: 931px) and (max-width: 1100px) {
+@media (min-width: 931px) {
   .client-card-section .card-wrapper {
     justify-content: flex-start;
     margin-left: 270px;
@@ -656,7 +656,7 @@ a {
     width: 20px;
   }
 }
-@media (min-width: 481px) {
+@media (min-width: 481px) and (max-width: 730px) {
   .featured-property h2 {
     font-size: 25px;
     text-align: center;
@@ -691,14 +691,14 @@ a {
     width: 20px;
   }
 }
-@media (min-width: 700px) and (max-width: 1075px) {
+@media (min-width: 731px) and (max-width: 1075px) {
   .featured-property h2 {
     font-size: 25px;
     text-align: center;
   }
   .featured-property .card-wrapper {
     grid-template-columns: repeat(2, 1fr);
-    align-items: center;
+    justify-items: center;
   }
   .featured-property .card-wrapper .card {
     margin-left: 10px;
@@ -728,6 +728,7 @@ a {
 }
 @media (min-width: 1076px) {
   .featured-property .card-wrapper {
+    justify-items: center;
     grid-template-columns: repeat(3, 1fr);
   }
 }
