--- a/css/style.css
+++ b/css/style.css
@@ -361,10 +361,10 @@ a {
   cursor: pointer;
 }
 .client-card-section .left {
-  left: -20px;
+  left: -10px;
 }
 .client-card-section .right {
-  right: -20px;
+  right: -10px;
 }
 
 @media (max-width: 480px) {
@@ -486,7 +486,7 @@ a {
     z-index: 2;
   }
 }
-@media (min-width: 931px) {
+@media (min-width: 931px) and (max-width: 1124px) {
   .client-card-section .card-wrapper {
     justify-content: flex-start;
     margin-left: 270px;
