--- a/src/sass/components/_featured-property-card.scss
+++ b/src/sass/components/_featured-property-card.scss
@@ -4,7 +4,7 @@
         grid-template-columns: repeat(3, 1fr);
         .card {
             width: 345px;
-            height: 420px;
+            height: 400px;
             margin-bottom: 30px;
             border-radius: 20px;
             border: solid 2px $light-color-2;
@@ -37,58 +37,36 @@
                 }
 
                 .card-description {
-                    margin-bottom: 11px;
+                    margin-bottom: 21px;
                 }
             }
         }
     }
 
 }
-
-.details {
-    display: inline;
-    opacity: 0.7;
-    color: #454545;
-}
-
-.card-beds {
-    &::before {
-        content: "";
-        background-image: url('https://i.postimg.cc/tJy3BqMW/icon-1.png');
-        margin-right: 10px;
-        background-size: cover;
-        width: 35px;
-        height: 25px;
-        display: inline-block;
+.icon-container{
+    display: flex;
+    justify-content: space-between;
+    span{
+        opacity: 0.7;
     }
+    svg{
+        margin-right: 5px;
+        &:hover path{
+            stroke: #75C2F6;
+        }
+       
+    }
+   .icon-baths{
+        display: flex;
+        justify-content: center;
+        svg{
+          position: relative;
+          top:-4px;
+        }
+    } 
 }
 
-.card-baths {
-    &::before {
-        content: "";
-        background-image: url('https://i.postimg.cc/HsFxmZTP/icon-2.png');
-        background-size: cover;
-        width: 45px;
-        height: 50px;
-        display: inline-block;
-        position: relative;
-        top: 13px;
-    }
-}
-
-.card-sqft {
-    &::before {
-        content: "";
-        background-image: url('https://i.postimg.cc/g0HkvG8f/icon-3.png`');
-        background-size: cover;
-        margin-right: 10px;
-        width: 35px;
-        height: 35px;
-        display: inline-block;
-        position: relative;
-        top: 5px;
-    }
-}
 @include breakpoints(map-get($breakpoints, "viewport-sm")){
     .featured-property{
         h2{
@@ -109,34 +87,18 @@
             .card-body{
                 text-align: center;
                padding: 19px 7px 50px;
-               .card-description {
-                margin-bottom: 4px;
-            }
+            
             }
         }
        
     }
 }
-.card-beds{
-    &::before{
-        margin-right: 1px;
-    }
+.icon-container{
+    justify-content: space-around;
 }
-.card-baths{
-    &::before{
-        margin-right: 1px;
-        width: 40px;
-    }
+
 }
-.card-sqft{
-    &::before{
-        margin-right: 1px;
-        width: 20px;
-    }
-   
-}
-}
-@media(min-width:481px) and (max-width:730px){
+@media(min-width:481px) and (max-width:735px){
     .featured-property{
         h2{
             font-size: 25px;
@@ -156,35 +118,18 @@
             .card-body{
                 text-align: center;
                padding: 19px 7px 50px;
-               .card-description {
-                margin-bottom: 4px;
-            }
+            
             }
         }
        
     }
 }
-.card-beds{
-    &::before{
-        margin-right: 10px;
-    }
-}
-.card-baths{
-    &::before{
-        margin-right: 10px;
-        width: 40px;
-    }
-}
-.card-sqft{
-    &::before{
-        margin-right: 10px;
-        width: 20px;
-    }
-   
+.icon-container{
+    justify-content: space-around;
 }
 }
 
-@media(min-width:730px) and (max-width:1075px){
+@media(min-width:736px) and (max-width:1075px){
     .featured-property{
         h2{
             font-size: 25px;
@@ -203,32 +148,13 @@
             .card-body{
                 text-align: center;
                padding: 19px 7px 50px;
-               .card-description {
-                margin-bottom: 4px;
-            }
+             
             }
         }
        
     }
 }
-.card-beds{
-    &::before{
-        margin-right: 10px;
-    }
-}
-.card-baths{
-    &::before{
-        margin-right: 10px;
-        width: 40px;
-    }
-}
-.card-sqft{
-    &::before{
-        margin-right: 10px;
-        width: 20px;
-    }
-   
-}
+
 }
 @media(min-width:1076px){
     .featured-property{
