--- a/src/sass/layout/_villa-section.scss
+++ b/src/sass/layout/_villa-section.scss
@@ -25,7 +25,7 @@
             }
 
             .card-description {
-                margin-bottom: 11px;
+                margin-bottom: 21px;
                 font-size: 17px;
             }
         }
@@ -100,5 +100,8 @@
                 width: 95%;
             }
         }
+    }
+    .icon-container{
+        justify-content: space-around;
     }
     }
