--- a/src/sass/layout/_villa-section.scss
+++ b/src/sass/layout/_villa-section.scss
@@ -1,5 +1,6 @@
 .villa-section{
     background-image: url('https://i.postimg.cc/cLZQZLxz/background-image-copy.png');
+    //https://i.postimg.cc/CLRpgWrQ/background-image-copy.webp
     background-position: center;
     background-size: cover;
     width: 100%;
@@ -38,7 +39,7 @@
             border-radius: 5px;
             &::before{
                 content:" ";
-                background-image: url('https://i.postimg.cc/85cT8Mfb/man.png');
+                background-image: url('https://i.postimg.cc/zBtyMs3k/man.webp');
                 background-position: center;
                 background-size: cover;
                 position:absolute;
