--- a/css/style.css
+++ b/css/style.css
@@ -573,12 +573,13 @@ a {
 }
 .icon-container span {
   opacity: 0.7;
-}
-.icon-container svg {
-  margin-right: 5px;
+  font-size: 14px;
 }
 .icon-container svg:hover path {
   stroke: #75C2F6;
+}
+.icon-container .icon-beds {
+  display: flex;
 }
 .icon-container .icon-baths {
   display: flex;
@@ -586,7 +587,10 @@ a {
 }
 .icon-container .icon-baths svg {
   position: relative;
-  top: -4px;
+  top: -7px;
+}
+.icon-container .icon-3 {
+  display: flex;
 }
 
 @media (max-width: 480px) {
@@ -1071,7 +1075,7 @@ a {
 }
 .villa-section .container .contact-card::before {
   content: " ";
-  background-image: url("https://i.postimg.cc/85cT8Mfb/man.png");
+  background-image: url("https://i.postimg.cc/zBtyMs3k/man.webp");
   background-position: center;
   background-size: cover;
   position: absolute;
