--- a/src/sass/components/_featured-property-card.scss
+++ b/src/sass/components/_featured-property-card.scss
@@ -49,22 +49,31 @@
     justify-content: space-between;
     span{
         opacity: 0.7;
+        font-size: 14px;
     }
     svg{
-        margin-right: 5px;
         &:hover path{
             stroke: #75C2F6;
         }
        
+    }
+    .icon-beds{
+        display: flex;
+        svg{
+            // width: 20px;
+        }
     }
    .icon-baths{
         display: flex;
         justify-content: center;
         svg{
           position: relative;
-          top:-4px;
+          top:-7px;
         }
     } 
+    .icon-3{
+        display: flex;
+    }
 }
 
 @include breakpoints(map-get($breakpoints, "viewport-sm")){
