--- a/src/sass/components/_featured-property-card.scss
+++ b/src/sass/components/_featured-property-card.scss
@@ -51,17 +51,14 @@
         opacity: 0.7;
         font-size: 14px;
     }
-    svg{
-        &:hover path{
-            stroke: #75C2F6;
-        }
+    // svg{
+    //     &:hover{
+    //         stroke: #75C2F6;
+    //     }
        
-    }
+    // }
     .icon-beds{
         display: flex;
-        svg{
-            // width: 20px;
-        }
     }
    .icon-baths{
         display: flex;
