image format changed

--- a/src/sass/components/_search-input.scss
+++ b/src/sass/components/_search-input.scss
@@ -36,7 +36,7 @@
   }
 }
 
-@media (max-width:$viewport-sm) {
+@media (max-width:350px) {
   .hero {
     .search-container {
       .search-input {
