--- a/css/style.css
+++ b/css/style.css
@@ -853,7 +853,7 @@ a {
   }
 }
 .hero {
-  background-image: url("https://i.postimg.cc/Gt20TCxJ/background.png");
+  background-image: url("https://i.postimg.cc/hj1Tbxv7/background.png");
   background-size: cover;
   height: 723px;
   margin-bottom: 96px;
@@ -1031,7 +1031,7 @@ a {
   }
 }
 .villa-section {
-  background-image: url("https://i.postimg.cc/cLZQZLxz/background-image-copy.png");
+  background-image: url("https://i.postimg.cc/zXKbnKQD/background-image-copy.png");
   background-position: center;
   background-size: cover;
   width: 100%;
