--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -1,6 +1,5 @@
 .hero {
-  background-image: url('https://i.postimg.cc/Gt20TCxJ/background.png');
-  //https://i.postimg.cc/25kNZPyr/background.webp
+  background-image: url('https://i.postimg.cc/hj1Tbxv7/background.png');
   background-size: cover;
 
   height: 723px;
